--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <a href="theory.html">📘 Теориялық мәлімет</a>
     <a href="tasks.html">🧪 Практикалық тапсырма</a>
     <a href="tests.html">📊 Тест</a>
-	<a href="games/mendel.html">Интерактивті ойындар</a>
+	<a href="games.html">Интерактивті ойындар</a>
     <a href="lab.html">🔬 Зертханалық жұмыс</a>
     <a href="teachers.html">👩‍🏫 Мұғалімдерге</a>
   </nav>
