--- a/tests.html
+++ b/tests.html
@@ -98,7 +98,7 @@ button:hover {
     <p>Тұқымқуалаушылық және өзгергіштік бөлімі бойынша</p>
   </header>
   <nav>
-    <a href="GenEdu_Site.html"> Басты бет</a>
+    <a href="index.html"> Басты бет</a>
     <a href="theory.html">📘 Теориялық мәлімет</a>
     <a href="tasks.html">🧪 Практикалық тапсырма</a>
     <a href="tests.html">📊 Тест</a>
